# Mauritanian-license-plate-recognition

./: README.md  inference.py  pyproject.toml  utils.py
images/: README.md  image_processing.py  preprocessing_utils.py
predictions/: predictions.csv  predictions_character_level.csv
training/: mauritanian-plate-recognition.ipynb
